# UVCStream

./: CMakeLists.txt  main.cpp
Capture/: Encoder.cpp  Encoder.hpp  ScreenCapturer.cpp  ScreenCapturer.hpp
notes/: d3d11_notes.md
